[workspace]
resolver = "2"
members = [
  "axum-tracing-opentelemetry",
  "examples/*",
  "fake-opentelemetry-collector",
  "init-tracing-opentelemetry",
  "testing-tracing-opentelemetry",
  "tonic-tracing-opentelemetry",
  "tracing-opentelemetry-instrumentation-sdk",
]

exclude = ["examples/grpc", "target", "tonic-tracing-opentelemetry"]

[workspace.package]
edition = "2021"
version = "0.19.0"
authors = ["David Bernard"]
license = "CC0-1.0"
homepage = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk"
repository = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk"
rust-version = "1.80.0"

[workspace.dependencies]
http = "^1"
opentelemetry = { version = "0.25", features = [
  "trace",
], default-features = false }
opentelemetry_sdk = { version = "0.25", default-features = false, features = [
  "rt-tokio",
] }
opentelemetry-aws = { version = "0.12", default-features = false }
opentelemetry-jaeger = { version = "0.22", default-features = false }
opentelemetry-jaeger-propagator = { version = "0.25", default-features = false }
opentelemetry-resource-detectors = { version = "0.4", default-features = false }
opentelemetry-semantic-conventions = { version = "0.25", default-features = false }
opentelemetry-zipkin = { version = "0.25", default-features = false }
opentelemetry-otlp = { version = "0.25", default-features = false }
opentelemetry-proto = { version = "0.25", default-features = false }
opentelemetry-stdout = { version = "0.25" }
tonic = { version = "0.12", default-features = false } #should be sync with opentelemetry-proto
tracing = "0.1"
tracing-opentelemetry = "0.26"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[workspace.metadata.release]
pre-release-commit-message = "🚀 (cargo-release) version {{version}}"
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "🔖 {{version}}"

[patch.crates-io]
# opentelemetry-resource-detectors v0.4 is published
opentelemetry-resource-detectors = { git = "https://github.com/open-telemetry/opentelemetry-rust-contrib", rev = "281c215b46ac5730f76dd017016c3bb56b97dc4f" }
